발표 시연용 빌드